test/visibility/private/argumentBad.good
argumentBad.chpl:1: syntax error: near 'private'
